[LARAI] Removes call to deprecated method